updated phone input not to accept alphabets in signup form

--- a/src/app/footer/phone/phone.component.html
+++ b/src/app/footer/phone/phone.component.html
@@ -1,5 +1,5 @@
 <div class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110
 flex cursor-pointer">
     <i-feather name="Phone" class="mr-1 max-h-3" style="width: 15px; height: 15px;"></i-feather>
-    <span class="font-sans font-sm">+212 (0)610 310 304</span>
+    <span class="font-sans font-sm">+1 (236) 990 0823</span>
 </div>
