--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -27,16 +27,16 @@
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                         <div>
                             <input formControlName="firstname" placeholder="First Name"
-                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('firstname').invalid && f('firstname').touched,
+                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('firstname').invalid && f('firstname').dirty,
                                  'border-gray-300': f('firstname').valid}" />
-                            <div *ngIf="f('firstname').invalid && f('firstname').touched"
+                            <div *ngIf="f('firstname').invalid && f('firstname').dirty"
                                 class="text-xs text-red-500 mt-1">First name is required</div>
                         </div>
                         <div>
                             <input formControlName="lastname" placeholder="Last Name"
-                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('lastname').invalid && f('lastname').touched,
+                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('lastname').invalid && f('lastname').dirty,
                                  'border-gray-300': f('lastname').valid}" />
-                            <div *ngIf="f('lastname').invalid && f('lastname').touched"
+                            <div *ngIf="f('lastname').invalid && f('lastname').dirty"
                                 class="text-xs text-red-500 mt-1">Last name is required</div>
                         </div>
                     </div>
@@ -45,31 +45,41 @@
                     <div>
                         <label class="block mb-1 font-semibold">Country</label>
                         <select formControlName="country" class="w-full px-4 py-3 rounded-md border focus:outline-none"
-                            [ngClass]="{'border-red-600': f('country').invalid && f('country').touched,
+                            [ngClass]="{'border-red-600': f('country').invalid && f('country').dirty,
                                 'border-gray-300': f('country').valid}">
                             <option value="" disabled selected>Please select your country</option>
                             <option *ngFor="let c of countries" [value]="c.name">{{ c.name }}</option>
                         </select>
-                        <div *ngIf="f('country').invalid && f('country').touched" class="text-xs text-red-500 mt-1">
+                        <div *ngIf="f('country').invalid && f('country').dirty" class="text-xs text-red-500 mt-1">
                             Please select your country</div>
                     </div>
 
                     <!-- Phone -->
                     <div>
                         <input formControlName="phone" type="tel" placeholder="Phone"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('phone').invalid && f('phone').touched,
-                               'border-gray-300': f('phone').valid}" />
-                        <div *ngIf="f('phone').invalid && f('phone').touched" class="text-xs text-red-500 mt-1">Must be
-                            at least 9 digits</div>
+                                 class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{
+                                'border-red-600': f('phone').invalid && f('phone').dirty,
+                             'border-gray-300': f('phone').valid
+                             }" maxlength="15" inputmode="numeric" pattern="[0-9]*" (input)="filterNumbersOnly($event)" />
+
+                        <div *ngIf="f('phone').errors?.['required'] && f('phone').dirty"
+                            class="text-xs text-red-500 mt-1">
+                            Phone number is required
+                        </div>
+                        <div *ngIf="f('phone').errors?.['minlength'] && f('phone').dirty"
+                            class="text-xs text-red-500 mt-1">
+                            Must be at least 8 digits
+                        </div>
                     </div>
+
 
                     <!-- DOB -->
                     <div>
                         <input formControlName="dob" type="date"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('dob').invalid && f('dob').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('dob').invalid && f('dob').dirty,
                                'border-gray-300': f('dob').valid}" />
-                        <div *ngIf="f('dob').invalid && f('dob').touched" class="text-xs text-red-500 mt-1">Please
-                            select your birth date</div>
+                        <div *ngIf="f('dob').invalid && f('dob').dirty" class="text-xs text-red-500 mt-1">
+                            Please select your birth date</div>
                     </div>
 
                     <!-- Gender -->
@@ -77,17 +87,17 @@
                         <label class="block mb-1 font-semibold">Gender</label>
                         <div class="flex gap-4">
                             <label class="flex-1 text-center py-2 rounded-full border cursor-pointer transition
-                           hover:bg-red-100" [class.bg-red-600]="signupForm.value.gender==='Male'"
+                           hover:bg-red-600 hover:text-white" [class.bg-red-600]="signupForm.value.gender==='Male'"
                                 [class.text-white]="signupForm.value.gender==='Male'">
                                 <input type="radio" formControlName="gender" value="Male" class="hidden" /> Male
                             </label>
                             <label class="flex-1 text-center py-2 rounded-full border cursor-pointer transition
-                           hover:bg-red-100" [class.bg-red-600]="signupForm.value.gender==='Female'"
+                           hover:bg-red-600 hover:text-white" [class.bg-red-600]="signupForm.value.gender==='Female'"
                                 [class.text-white]="signupForm.value.gender==='Female'">
                                 <input type="radio" formControlName="gender" value="Female" class="hidden" /> Female
                             </label>
                         </div>
-                        <div *ngIf="f('gender').invalid && f('gender').touched" class="text-xs text-red-500 mt-1">Please
+                        <div *ngIf="f('gender').invalid && f('gender').dirty" class="text-xs text-red-500 mt-1">Please
                             select a gender</div>
                     </div>
                 </div>
@@ -105,16 +115,16 @@
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                         <div>
                             <input formControlName="state" placeholder="State"
-                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('state').invalid && f('state').touched,
+                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('state').invalid && f('state').dirty,
                          'border-gray-300': f('state').valid}" />
-                            <div *ngIf="f('state').invalid && f('state').touched" class="text-xs text-red-500 mt-1">
+                            <div *ngIf="f('state').invalid && f('state').dirty" class="text-xs text-red-500 mt-1">
                                 State is required</div>
                         </div>
                         <div>
                             <input formControlName="city" placeholder="City"
-                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('city').invalid && f('city').touched,
+                                class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('city').invalid && f('city').dirty,
                          'border-gray-300': f('city').valid}" />
-                            <div *ngIf="f('city').invalid && f('city').touched" class="text-xs text-red-500 mt-1">City
+                            <div *ngIf="f('city').invalid && f('city').dirty" class="text-xs text-red-500 mt-1">City
                                 is required</div>
                         </div>
                     </div>
@@ -122,18 +132,18 @@
                     <!-- Postal Code -->
                     <div>
                         <input formControlName="postalCode" type="text" placeholder="Postal Code"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('postalCode').invalid && f('postalCode').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('postalCode').invalid && f('postalCode').dirty,
                        'border-gray-300': f('postalCode').valid}" />
-                        <div *ngIf="f('postalCode').invalid && f('postalCode').touched"
+                        <div *ngIf="f('postalCode').invalid && f('postalCode').dirty"
                             class="text-xs text-red-500 mt-1">Must be at least 5 characters</div>
                     </div>
 
                     <!-- Full Address -->
                     <div>
                         <textarea formControlName="address" rows="3" placeholder="Full Address"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('address').invalid && f('address').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('address').invalid && f('address').dirty,
                           'border-gray-300': f('address').valid}"></textarea>
-                        <div *ngIf="f('address').invalid && f('address').touched" class="text-xs text-red-500 mt-1">
+                        <div *ngIf="f('address').invalid && f('address').dirty" class="text-xs text-red-500 mt-1">
                             Address is required</div>
                     </div>
 
@@ -147,7 +157,7 @@
                                 class="absolute inset-0 w-full h-full opacity-0 cursor-pointer" />
                             <!-- preview if set, otherwise camera icon -->
                             <img *ngIf="imagePreview; else cameraIcon" [src]="imagePreview" alt="Profile preview"
-                               class="object-cover w-full h-full rounded-md"/>
+                                class="object-cover w-full h-full rounded-md" />
                             <ng-template #cameraIcon>
                                 <feather-icon name="camera" class="w-6 h-6 text-gray-400"></feather-icon>
                             </ng-template>
@@ -160,8 +170,7 @@
                         </button>
 
                         <!-- Validation -->
-                        <div *ngIf="f('profilePhoto').invalid && f('profilePhoto').dirty"
-                            class="text-xs text-red-500 mt-1 text-center">
+                        <div *ngIf="!selectedImage && !imagePreview" class="text-xs text-red-500 mt-1 text-center">
                             Photo is required
                         </div>
                     </div>
@@ -178,27 +187,27 @@
                     <!-- Email -->
                     <div>
                         <input formControlName="email" type="email" placeholder="Email address"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('email').invalid && f('email').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('email').invalid && f('email').dirty,
                                'border-gray-300': f('email').valid}" />
-                        <div *ngIf="f('email').invalid && f('email').touched" class="text-xs text-red-500 mt-1">
+                        <div *ngIf="f('email').invalid && f('email').dirty" class="text-xs text-red-500 mt-1">
                             Valid email is required</div>
                     </div>
 
                     <!-- Password -->
                     <div>
                         <input formControlName="password" type="password" placeholder="Password"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('password').invalid && f('password').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': f('password').invalid && f('password').dirty,
                                'border-gray-300': f('password').valid}" />
-                        <div *ngIf="f('password').invalid && f('password').touched" class="text-xs text-red-500 mt-1">
+                        <div *ngIf="f('password').invalid && f('password').dirty" class="text-xs text-red-500 mt-1">
                             Password must be at least 8 chars</div>
                     </div>
 
                     <!-- Confirm Password -->
                     <div>
                         <input formControlName="confirmPassword" type="password" placeholder="Confirm Password"
-                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': signupForm.hasError('passwordMismatch') && f('confirmPassword').touched,
+                            class="w-full px-4 py-3 rounded-md border focus:outline-none" [ngClass]="{'border-red-600': signupForm.hasError('passwordMismatch') && f('confirmPassword').dirty,
                                'border-gray-300': f('confirmPassword').valid}" />
-                        <div *ngIf="signupForm.hasError('passwordMismatch') && f('confirmPassword').touched"
+                        <div *ngIf="signupForm.hasError('passwordMismatch') && f('confirmPassword').dirty"
                             class="text-xs text-red-500 mt-1">Passwords do not match</div>
                     </div>
                 </div>
